Committing 'share to cloud storage' feature. This uses iOS's 'document provider' extension.

--- a/MuseStatsIos/MuseStatsIos/Base.lproj/Main.storyboard
+++ b/MuseStatsIos/MuseStatsIos/Base.lproj/Main.storyboard
@@ -65,6 +65,13 @@
                                                     <color key="textColor" red="0.3921568627" green="0.3921568627" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YYI-sL-mTL">
+                                                    <rect key="frame" x="74" y="50" width="40" height="30"/>
+                                                    <state key="normal" title="Share"/>
+                                                    <connections>
+                                                        <action selector="exportToCloudStorageTapped:" destination="PcE-xy-3PG" eventType="touchUpInside" id="NY3-dg-rkB"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
