--- a/MuseStatsIos/MuseStatsIos/Base.lproj/LaunchScreen.xib
+++ b/MuseStatsIos/MuseStatsIos/Base.lproj/LaunchScreen.xib
@@ -12,11 +12,15 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Icon_1024.png" translatesAutoresizingMaskIntoConstraints="NO" id="iQm-IH-cRG">
-                    <rect key="frame" x="13" y="164" width="294" height="240"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon_1024.png" translatesAutoresizingMaskIntoConstraints="NO" id="iQm-IH-cRG">
+                    <rect key="frame" x="13" y="83" width="294" height="240"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="240" id="Nsl-vL-3qq"/>
+                        <constraint firstAttribute="width" constant="294" id="YFH-ik-KCV"/>
+                    </constraints>
                 </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="BrainLog" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="79" y="262" width="163" height="40"/>
+                    <rect key="frame" x="79" y="181" width="163" height="40"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="36"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -28,8 +32,12 @@
                 <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="5c7-v1-TjU"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
                 <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
+                <constraint firstAttribute="trailing" secondItem="iQm-IH-cRG" secondAttribute="trailing" constant="13" id="QiV-gw-FVd"/>
+                <constraint firstItem="iQm-IH-cRG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="abt-j0-Yan"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="f5i-Cd-1MQ"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="iQm-IH-cRG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="m6c-9A-Atr"/>
+                <constraint firstItem="iQm-IH-cRG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="83" id="r2h-VD-okW"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="218" id="sZX-lX-aCQ"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
