--- a/MuseStatsIos/MuseStatsIos/Base.lproj/LaunchScreen.xib
+++ b/MuseStatsIos/MuseStatsIos/Base.lproj/LaunchScreen.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,56 +11,27 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon_1024.png" translatesAutoresizingMaskIntoConstraints="NO" id="iQm-IH-cRG">
-                    <rect key="frame" x="13" y="83" width="294" height="240"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Icon_320_240.png" translatesAutoresizingMaskIntoConstraints="NO" id="iQm-IH-cRG">
+                    <rect key="frame" x="0.0" y="83" width="320" height="240"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="240" id="Nsl-vL-3qq"/>
                         <constraint firstAttribute="width" constant="294" id="YFH-ik-KCV"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BrainLog" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="79" y="181" width="163" height="40"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="163" id="DLT-f0-TQX"/>
-                        <constraint firstAttribute="height" constant="40" id="V95-Fj-Snw"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="36"/>
-                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="5c7-v1-TjU"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
                 <constraint firstAttribute="trailing" secondItem="iQm-IH-cRG" secondAttribute="trailing" constant="13" id="QiV-gw-FVd"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="181" id="Ufw-MO-d4i"/>
                 <constraint firstItem="iQm-IH-cRG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="abt-j0-Yan"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="f5i-Cd-1MQ"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
-                <constraint firstAttribute="trailing" secondItem="kId-c2-rCX" secondAttribute="trailing" constant="78" id="kwY-ck-Uev"/>
                 <constraint firstItem="iQm-IH-cRG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="m6c-9A-Atr"/>
                 <constraint firstItem="iQm-IH-cRG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="83" id="r2h-VD-okW"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="218" id="sZX-lX-aCQ"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="79" id="yHO-i8-IgM"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="5c7-v1-TjU"/>
-                    <exclude reference="5cJ-9S-tgC"/>
-                    <exclude reference="f5i-Cd-1MQ"/>
-                    <exclude reference="fvb-Df-36g"/>
-                    <exclude reference="sZX-lX-aCQ"/>
-                </mask>
-            </variation>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
     <resources>
-        <image name="Icon_1024.png" width="1024" height="1024"/>
+        <image name="Icon_320_240.png" width="320" height="240"/>
     </resources>
 </document>
