--- a/MuseStatsIos/MuseStatsIos/Base.lproj/LaunchScreen.xib
+++ b/MuseStatsIos/MuseStatsIos/Base.lproj/LaunchScreen.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,19 +11,19 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Icon_320_240.png" translatesAutoresizingMaskIntoConstraints="NO" id="iQm-IH-cRG">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon_320_240.png" translatesAutoresizingMaskIntoConstraints="NO" id="iQm-IH-cRG">
                     <rect key="frame" x="0.0" y="83" width="320" height="240"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="240" id="Nsl-vL-3qq"/>
-                        <constraint firstAttribute="width" constant="294" id="YFH-ik-KCV"/>
+                        <constraint firstAttribute="width" constant="320" id="YFH-ik-KCV"/>
                     </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="iQm-IH-cRG" secondAttribute="trailing" constant="13" id="QiV-gw-FVd"/>
+                <constraint firstAttribute="trailing" secondItem="iQm-IH-cRG" secondAttribute="trailing" id="QiV-gw-FVd"/>
                 <constraint firstItem="iQm-IH-cRG" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="abt-j0-Yan"/>
-                <constraint firstItem="iQm-IH-cRG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="13" id="m6c-9A-Atr"/>
+                <constraint firstItem="iQm-IH-cRG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="m6c-9A-Atr"/>
                 <constraint firstItem="iQm-IH-cRG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="83" id="r2h-VD-okW"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
